added doc for running in I ntelliJ