@@ -14,6 +14,17 @@ Purpose:
   * 
   
 # Build and Run
+
+## From CLI
 Build: ```./mnvw clean install```
 
 Run: ```./mnvw javafx:run```
+
+## From IntelliJ
+Download javafx SDK platform dependent modules from [Gluon](https://gluonhq.com/products/javafx/) and copy so that jar files is found here ```platform/javafx-sdk-23.0.1/lib```
+
+In run configuration add 
+```
+--module-path platform/javafx-sdk-23.0.1/lib --add-modules javafx.controls
+```
+as VM Options
